# HermesPlusPlus

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
apps/hermes-plus-manager/: package.json
apps/hermes-plus-manager/src-tauri/: Cargo.toml  tauri.conf.json
apps/hermes-plus-manager/src-tauri/capabilities/: default.json
apps/hermes-plus-manager/src-tauri/src/: commands.rs  lib.rs  main.rs
crates/hermes-plus-core/: Cargo.toml
crates/hermes-plus-core/src/: lib.rs  model_catalog.rs  proxy_server.rs  relay_config.rs  settings.rs  upstream_worktree.rs
src/: api.rs  main.rs  proxy.rs  settings.rs  ui.html
