[workspace]
resolver = "2"
members = [
  "crates/hermes-plus-core",
  "apps/hermes-plus-manager/src-tauri",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/BigPizzaV3/HermesPlusPlus"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "time", "net"] }
tauri = { version = "2" }
tauri-build = { version = "2", features = [] }
reqwest = { version = "0.13", default-features = false, features = ["json", "stream", "rustls"] }
toml = "0.8"
toml_edit = "0.22"
directories = "5"
url = "2"
thiserror = "2"
base64 = "0.22"
log = "0.4"
env_logger = "0.11"
uuid = { version = "1", features = ["v4"] }
bytes = "1"
