[package]
name = "hermes-plus-manager"
version = "1.0.0"
edition = "2021"
description = "HermesPlusPlus - Multi-provider manager for Hermes/Claude Code CLI"

[[bin]]
name = "hermes-plus-manager"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
anyhow = "1"
directories = "5"
open = "5"
uuid = { version = "1", features = ["v4"] }
bytes = "1"
