[package]
name = "hermes-plus-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
reqwest.workspace = true
axum.workspace = true
tower.workspace = true
http.workspace = true
http-body.workspace = true
http-body-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
toml.workspace = true
toml_edit.workspace = true
directories.workspace = true
url.workspace = true
thiserror.workspace = true
base64.workspace = true
log.workspace = true
env_logger.workspace = true
uuid.workspace = true
bytes.workspace = true
futures.workspace = true
